2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-12-02  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* src/Makefile.am:
	Add check and cflags for malloc(0) returning NULL.

2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* xrender.pc.in:
	Update pkgconfig files to separate library build-time dependencies
	from application build-time dependencies.
	* configure.ac:
	Update dependencies to work with separate build roots.

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* src/.cvsignore:
	Add .cvsignore files

2005-06-09  Alexander Gottwald  <ago@freedesktop.org>

	* src/Makefile.am: 
	Use $(top_srcdir)/... instead of $(top_builddir)/... in INCLUDES
	Added $(top_srcdir) to INCLUDES 

2004-11-22  Carl Worth  <cworth@cworth.org>

	* configure.ac: Remove AC_CONFIG_AUX_DIR (it was in the wrong
	place for automake-1.9, and it was set to the default value
	anyway).

2004-10-18  Noah Levitt  <nlevitt@columbia.edu>

	* configure.ac: Export RENDER_CFLAGS.

2004-09-05  Keith Packard  <keithp@keithp.com>

	* configure.ac:
	Move AC_CONFIG_AUX_DIR above AM_INIT_AUTOMAKE to make 
	automake 1.9 happy

2004-07-29  Keith Packard  <keithp@keithp.com>

	* Makefile.am:
	* Xrender.h:
	* configure.ac:
	Update to protocol 0.9 which includes RenderAddTraps request

2004-04-10  Keith Packard  <keithp@keithp.com>

	reviewed by: Mark Ashley <mark@ibiblio.org>

	* Xrenderint.h:
	Solaris appears to need <string.h> included to compile
	this library.  Who knows.  It seems harmless enough,
	and the configure script already detected it's presence,
	so we just included it whenever available.

2004-02-03  Jim Gettys  <jg@freedesktop.org>

	* AUTHORS: Get a author's list going.

2004-01-15  Daniel Stone  <daniel@fooishbar.org>