@@ -1,3 +1,9 @@
+2006-04-02  Adam Jackson  <ajax@freedesktop.org>
+
+	* src/Xrender.c:
+	Coverity #428: Fix a potential NULL chase.
+	Coverity #930: Verify that a malloc succeeds.
+
 2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
